# num-methods-lab02-paris-gun

./: .gitignore  CMakeLists.txt  README.md  atmosphere.cpp  atmosphere.h  geodesy.cpp  geodesy.h  main.cpp  main.py  odesolver.cpp  odesolver.hpp  odevents.cpp  odevents.hpp  rk4.cpp  rk4.h  rkf45.cpp  rkf45.h  vector_operations.h
tests/: CMakeLists.txt  geodesy_test.cpp
